refactor test names and service logic, change diff for subtract